# 2dEngine2

./: .gitignore  2dEngine2.sln  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Project1.vcxproj  Project1.vcxproj.filters  README.MD  StateSubMachine.cpp  StateSubMachine.h  imgui.ini
EDITOR/: CMakeLists.txt
EDITOR/assets/SCRIPTS/ASTERIODS/: asteroid.lua  projectile.lua  ship.lua
EDITOR/assets/SCRIPTS/TESTPROJECT1/: samplemap.lua
EDITOR/assets/SCRIPTS/events/: collision_event.lua  sensor_event.lua
EDITOR/assets/SCRIPTS/systems/: sensor_system.lua
EDITOR/assets/SHADER/: circleShader.vert  colorShader.frag
EDITOR/assets/TILEDMAP/: Sprite-0001.ase  sampleDungenTileset.tsx
EDITOR/assets/TILEDMAP/FireBoyWaterGirl/: fireboywatergirltiledmap.lua
EDITOR/assets/explosions/explosion-process-set-with-explosion-stages-symbols-cartoon-vector-illustration/: 3504.eps
EDITOR/cmake/: CMakeLists.txt  Sources.cmake
EDITOR/include/: Application.h
EDITOR/include/DISPLAYS/: AssetDisplay.h  IDisplay.h  LogDisplay.h  MenuDisplay.h  SceneDisplay.h  TilemapDisplay.h  TilesetDisplay.h
EDITOR/include/SCENE/: SceneManager.h  SceneObject.h
EDITOR/include/SYSTEMS/: GridSystem.h
EDITOR/include/TOOLS/: AbstractTool.h  CreateTileTool.h  RectFillTool.h  TileTool.h  ToolAccessories.h  ToolManager.h
EDITOR/include/UTILITIES/: EditorFrameBuffers.h  EditorTextures.h  EditorUtilities.h
EDITOR/src/: Application.cpp  main.cpp
EDITOR/src/DISPLAYS/: AssetDisplay.cpp  LogDisplay.cpp  MenuDisplay.cpp  SceneDisplay.cpp  TilemapDisplay.cpp  TilesetDisplay.cpp
EDITOR/src/SCENE/: SceneManager.cpp  SceneObject.cpp
EDITOR/src/SYSTEMS/: GridSystem.cpp
EDITOR/src/TOOLS/: AbstractTool.cpp  CreateTileTool.cpp  RectFillTool.cpp  TileTool.cpp  ToolManager.cpp
GAMEENGINE/: CMakeLists.txt  GAMEENGINE.vcxproj  GAMEENGINE.vcxproj.filters
GAMEENGINE/ENGINE/ECS/: ComponentSerializer.cpp  ComponentSerializer.h  ComponentSerializer.inl  Entity.h  MainRegistry.cpp  MainRegistry.h  MetaUtilities.cpp  MetaUtilities.h  Registry.cpp  Registry.h  Registry.inl
GAMEENGINE/ENGINE/INPUT/: KeyListener.h
GAMEENGINE/ENGINE/LOADERS/: TilemapLoader.cpp  TilemapLoader.h
GAMEENGINE/ENGINE/LOGGER/: CrashLogger.cpp  CrashLogger.h  LuaLogBinding.h  log.cpp  log.h  log.inl
GAMEENGINE/ENGINE/MINIAUDIOSOUND/: MINIAudioEngine.cpp  MINIAudioEngine.h  MINIAudioMusic.cpp  MINIAudioMusic.h  MINIAudioSound.cpp  MINIAudioSound.h
GAMEENGINE/ENGINE/OPENALSOUNDS/: OpenALDevice.cpp  OpenALDevice.h
GAMEENGINE/ENGINE/PHYSICS/: Box2DWrappers.cpp  Box2DWrappers.h  ContactListener.cpp  ContactListener.h  SensorListener.cpp  SensorListener.h  UserData.cpp  UserData.h
GAMEENGINE/ENGINE/RESOURCES/: AssetManager.cpp  AssetManager.h
GAMEENGINE/ENGINE/SCRIPTING/: ContactListenerBind.cpp  ContactListenerBind.h  GLMLuaBindings.h  InputManager.cpp  InputManager.h  RendererBindings.cpp  RendererBindings.h  SensorListenerBind.cpp  SensorListenerBind.h  UserDataBinding.cpp  UserDataBinding.h  UserDataBinding.inl
GAMEENGINE/ENGINE/SOUND/: FMODAudioSystem.cpp  FMODAudioSystem.h
GAMEENGINE/ENGINE/STATES/: State.cpp  State.h  StateMachine.cpp  StateMachine.h  StateStack.cpp  StateStack.h  StateSubMachine.cpp  StateSubMachine.h
GAMEENGINE/ENGINE/SYSTEMS/: AnimationSystem.cpp  AnimationSystem.h  MINIAudioSoundSystem.cpp  MINIAudioSoundSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderShapeSystem.cpp  RenderShapeSystem.h  RenderSystem.cpp  RenderSystem.h  RenderUISystem.cpp  RenderUISystem.h  ScriptingSystem.cpp  ScriptingSystem.h  SoundSystem.cpp  SoundSystem.h
GAMEENGINE/ENGINE/UTILITIES/: 2dEngineUtilities.h  RandomGenerator.cpp  RandomGenerator.h  Time.cpp  Time.h  Timer.cpp  Timer.h
GAMEENGINE/ENGINE/WINDOW/: Window.cpp  Window.h
GAMEENGINE/cmake/: CMakeLists.txt  Dependencies.cmake  Sources.cmake
GAMEENGINE/include/ECS/: ComponentSerializer.h  ComponentSerializer.inl  Entity.h  Entity.inl  MainRegistry.h  MetaUtilities.h  Registry.h  Registry.inl
GAMEENGINE/include/INPUT/: KeyListener.h  MouseListener.h
GAMEENGINE/include/LOADERS/: TilemapLoader.h
GAMEENGINE/include/LOGGER/: CrashLogger.h  LuaLogBinding.h  log.h  log.inl
GAMEENGINE/include/OPENALSOUNDS/: OpenALDevice.h
GAMEENGINE/include/PHYSICS/: Box2DWrappers.h  ContactListener.h  SensorListener.h  UserData.h
GAMEENGINE/include/RESOURCES/: AssetManager.h
GAMEENGINE/include/SCRIPTING/: ContactListenerBind.h  GLMLuaBindings.h  InputManager.h  RendererBindings.h  SensorListenerBind.h  UserDataBinding.h  UserDataBinding.inl
GAMEENGINE/include/SOUND/: AudioEvent.h  FMODAudioSystem.h
GAMEENGINE/include/STATES/: State.h  StateMachine.h  StateStack.h  StateSubMachine.h
GAMEENGINE/include/SYSTEMS/: AnimationSystem.h  PhysicsSystem.h  RenderShapeSystem.h  RenderSystem.h  RenderUISystem.h  ScriptingSystem.h  SoundSystem.h
GAMEENGINE/include/UTILITIES/: 2dEngineUtilities.h  RandomGenerator.h  Time.h  Timer.h
GAMEENGINE/include/WINDOW/: Window.h
GAMEENGINE/src/: STBImplementation.cpp  pch.h
GAMEENGINE/src/ECS/: ComponentSerializer.cpp  Entity.cpp  MainRegistry.cpp  MetaUtilities.cpp  Registry.cpp
GAMEENGINE/src/INPUT/: KeyListener.cpp  MouseListener.cpp
GAMEENGINE/src/LOADERS/: TilemapLoader.cpp
GAMEENGINE/src/LOGGER/: CrashLogger.cpp  log.cpp
GAMEENGINE/src/OPENALSOUNDS/: OpenALDevice.cpp
GAMEENGINE/src/PHYSICS/: Box2DWrappers.cpp  ContactListener.cpp  SensorListener.cpp  UserData.cpp
GAMEENGINE/src/RESOURCES/: AssetManager.cpp
GAMEENGINE/src/SCRIPTING/: ContactListenerBind.cpp  GLMLuaBindings.cpp  InputManager.cpp  RendererBindings.cpp  SensorListenerBind.cpp  UserDataBinding.cpp
GAMEENGINE/src/SOUND/: AudioEvent.cpp  FMODAudioSystem.cpp
GAMEENGINE/src/STATES/: State.cpp  StateMachine.cpp  StateStack.cpp  StateSubMachine.cpp
GAMEENGINE/src/SYSTEMS/: AnimationSystem.cpp  PhysicsSystem.cpp  RenderShapeSystem.cpp  RenderSystem.cpp  RenderUISystem.cpp  ScriptingSystem.cpp  SoundSystem.cpp
GAMEENGINE/src/UTILITIES/: RandomGenerator.cpp  Time.cpp  Timer.cpp
GAMEENGINE/src/WINDOW/: Window.cpp
SRC/: Application.cpp  Application.h  (+1 more)
(+338 files in other folders)
